# transparent_reader

./: .editorconfig  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  USER_GUIDE.html  generate_bug_fix_prompt.py  generate_stage_plan.py  rebuild_and_run.bat
ai/: BUG_FIX_PROMPTS.md  STAGE_PLAN.md  small_model_prompt_templates.md  transparent_reader_dev_doc.md
docs/: AI_README.md  transparent_reader_dev_doc.md  transparentmdreader_scroll_restore_design.md  transparentmdreader_state_db_design.md
resources/web/: index.html  main.js  style.css
src/: CMakeLists.txt
src/app/: MainWindow.cpp  MainWindow.h  MarkdownPage.cpp  MarkdownPage.h  StateDbManager.cpp  StateDbManager.h  main.cpp
